src/snapshots/fcn__tests__it_works-2.snap
---
source: src/main.rs
description: "[\"sr-only\", \"uppercase\", \"!visible\", \"visible\", \"mx-1\", \"w-[10px]\", \"absolute\", \"MuiButton-startIcon\", \"pb-6\", \"text-sm\", \"w-10/11\", \"w-10\", \"bg-blue-500\", \"text-white\", \"bg-blue-600\", \"bg-white\", \"py-1\", \"py-2\", \"px-2\", \"px-4\", \"border-gray-400\", \"text-gray-800\", \"bg-gray-100\"]\n"
info: fixtures/sample.tsx
---
import React from "react";
export default function Foo() {
    return (<div className="tw-sr-only tw-visible untouched sm:[&_button]:tw-text-sm" intent="karma">

      <Button className="[&>.MuiButton-startIcon]:tw-absolute">

        <span className="tw-MuiButton-startIcon tw-w-10/11">×</span>

        Button

      </Button>



      <span className="[&>*]:tw-w-[10px] [&]:last-of-type:tw-pb-6 untouched"> </span>

    </div>);
}
