src/snapshots/fcn__tests__it_works.snap
---
source: src/main.rs
info: fixtures/sample.css
---
["sr-only", "uppercase", "!visible", "visible", "mx-1", "w-[10px]", "absolute", "MuiButton-startIcon", "pb-6", "text-sm", "w-10/11", "w-10", "bg-blue-500", "text-white", "bg-blue-600", "bg-white", "py-1", "py-2", "px-4", "border-gray-400", "text-gray-800", "bg-gray-100"]
