src/snapshots/fcn__tests__parses_classname_from_selectors_and_transforms_js_files-2.snap
---
source: src/main.rs
description: "import React from \"react\";\n\nexport default function Foo() {\n  return (\n    <div\n      className=\"sr-only visible untouched sm:[&_button]:text-sm\"\n      intent=\"karma\"\n    >\n      <Button className=\"[&>.MuiButton-startIcon]:absolute\">\n        <span className=\"MuiButton-startIcon\">×</span>\n        Button\n      </Button>\n\n      <span className=\"[&>*]:w-10 [&]:last-of-type:pb-6 untouched\"> </span>\n    </div>\n  );\n}\n"
info: "[\"sr-only\", \"!visible\", \"visible\", \"mx-1\", \"w-[10px]\", \"absolute\", \"MuiButton-startIcon\", \"pb-6\", \"text-sm\"]\n"
---
import React from "react";
export default function Foo() {
    return (<div className="tw-sr-only tw-visible untouched sm:[&_button]:tw-text-sm" intent="karma">

      <Button className="[&>.MuiButton-startIcon]:tw-absolute">

        <span className="tw-MuiButton-startIcon">×</span>

        Button

      </Button>



      <span className="[&>*]:w-10 [&]:last-of-type:tw-pb-6 untouched"> </span>

    </div>);
}
