src/snapshots/fcn__tests__parses_classname_from_selectors_and_transforms_js_files.snap
---
source: src/main.rs
expression: output
---
["sr-only", "!visible", "visible", "mx-1", "w-[10px]", "absolute", "MuiButton-startIcon", "pb-6", "text-sm"]
